--- a/xskinloader-sample/src/main/res/layout/activity_main.xml
+++ b/xskinloader-sample/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         android:layout_height="@dimen/skin_raw"
         android:layout_marginStart="100dp"
         android:background="#00ff00"
+        skin:enable="true"
         android:layout_marginTop="20dp">
 
         <ImageView
